@@ -15,8 +15,6 @@
  */
 
 
-
-
 package com.jayway.restassured.internal.mapping
 
 import com.fasterxml.jackson.core.JsonEncoding
@@ -33,43 +31,43 @@ import com.jayway.restassured.path.json.mapping.JsonPathObjectDeserializer
  */
 class Jackson2Mapper implements ObjectMapper {
 
-    private final Jackson2ObjectMapperFactory factory;
+  private final Jackson2ObjectMapperFactory factory;
 
-    private JsonPathObjectDeserializer deserializer
+  private JsonPathObjectDeserializer deserializer
 
-    Jackson2Mapper(Jackson2ObjectMapperFactory factory) {
-        this.factory = factory
-        deserializer = new JsonPathJackson2ObjectDeserializer(factory)
-    }
+  Jackson2Mapper(Jackson2ObjectMapperFactory factory) {
+    this.factory = factory
+    deserializer = new JsonPathJackson2ObjectDeserializer(factory)
+  }
 
-    private com.fasterxml.jackson.databind.ObjectMapper createJackson2ObjectMapper(Class cls, String charset) {
-        return factory.create(cls, charset)
-    }
+  private com.fasterxml.jackson.databind.ObjectMapper createJackson2ObjectMapper(Class cls, String charset) {
+    return factory.create(cls, charset)
+  }
 
-    def String serialize(ObjectMapperSerializationContext context) {
-        def object = context.getObjectToSerialize()
-        JsonEncoding jsonEncoding = getEncoding(context.getCharset())
-        def mapper = createJackson2ObjectMapper(object.getClass(), context.getCharset())
-        def stream = new ByteArrayOutputStream()
-        JsonGenerator jsonGenerator = mapper.getJsonFactory().createJsonGenerator(stream, jsonEncoding)
-        mapper.writeValue(jsonGenerator, object)
-        return stream.toString()
-    }
+  def String serialize(ObjectMapperSerializationContext context) {
+    def object = context.getObjectToSerialize()
+    JsonEncoding jsonEncoding = getEncoding(context.getCharset())
+    def mapper = createJackson2ObjectMapper(object.getClass(), context.getCharset())
+    def stream = new ByteArrayOutputStream()
+    JsonGenerator jsonGenerator = mapper.getJsonFactory().createJsonGenerator(stream, jsonEncoding)
+    mapper.writeValue(jsonGenerator, object)
+    stream.toString(jsonEncoding.getJavaName())
+  }
 
-    def Object deserialize(ObjectMapperDeserializationContext context) {
-        return deserializer.deserialize(context);
-    }
+  def Object deserialize(ObjectMapperDeserializationContext context) {
+    return deserializer.deserialize(context);
+  }
 
-    private JsonEncoding getEncoding(String charset) {
-        def foundEncoding = JsonEncoding.UTF8
-        if (charset != null) {
-            for (JsonEncoding encoding : JsonEncoding.values()) {
-                if (charset.equals(encoding.getJavaName())) {
-                    foundEncoding = encoding
-                    break
-                }
-            }
+  private JsonEncoding getEncoding(String charset) {
+    def foundEncoding = JsonEncoding.UTF8
+    if (charset != null) {
+      for (JsonEncoding encoding : JsonEncoding.values()) {
+        if (charset.equals(encoding.getJavaName())) {
+          foundEncoding = encoding
+          break
         }
-        return foundEncoding
+      }
     }
+    return foundEncoding
+  }
 }
